# openliga

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
openligadb/: services.py  urls.py  views.py
openligadb/templates/: all_games.html  base.html  navbar.html  next_day_games.html  win_loss_ratio.html
website/: settings.py  urls.py
website/openligadb/: apps.py  views.py
website/openligadb/templates/: index.html  team_search.html  win_loss_ratio.html
website/website/: settings.py
