[tool.poetry]
name = "openligadb"
version = "0.1.0"
description = ""
authors = ["Nikola Pavlov <nikola.pavlov1955@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
requests = "^2.26.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
